arreglos en parametros de articulos, y modelo de orm parametro activo
